modules/tests/_kubernetes-policy/fixtures/workloads/media-storage-ingress-wrong-namespace/resources.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: media-jellyfin-ingress
  namespace: jellyfin
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: jellyfin
      podSelector:
        matchLabels:
          app.kubernetes.io/controller: main
          app.kubernetes.io/instance: seerr
          app.kubernetes.io/name: seerr
    ports:
    - port: 8096
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: jellyfin
      app.kubernetes.io/name: jellyfin
  policyTypes:
  - Ingress
